few updates to week 2, but more thorough review still needs to happen

--- a/course-materials/lecture-slides/lecture2.1-choosing-graphic-forms-slides.qmd
+++ b/course-materials/lecture-slides/lecture2.1-choosing-graphic-forms-slides.qmd
@@ -31,7 +31,7 @@ editor_options:
 >"Exams will have a total of 137 points rather than the usual 100. This scoring system has no effect on the grade you get in the course, but it seems to make you happier"
 
 ::: {.right-align-text}
--[Richard H. Thaler](https://www.chicagobooth.edu/faculty/directory/t/richard-h-thaler), economist & professor
+-[Richard H. Thaler](https://www.chicagobooth.edu/faculty/directory/t/richard-h-thaler){target="_blank"}, economist & professor
 :::
 
 - [**Early years:** exam graded 0 - 100 with an average score of 72 points = lots of complaints]{.body-text-s}
@@ -75,7 +75,7 @@ knitr::include_graphics("images/week2/thaler-exams.png")
 ```
 
 ::: {.body-text-s .gray-text .center-text}
-Albert Cairo's visualization of the scores from Thaler's exam case study
+Albert Cairo's visualization of the scores from Thaler's exam case study, from [The Truthful Art](https://www.amazon.com/gp/product/0321934075/){target="_blank"}
 :::
 
 ---
@@ -90,8 +90,8 @@ Albert Cairo's visualization of the scores from Thaler's exam case study
 <br>
 <br>
 
-::: {.center-text}
-[***Mapping data into visual properties is powerful***]{.body-text-m .teal-text}
+::: {.center-text .body-text-m .teal-text}
+**Mapping data into visual properties is powerful**
 :::
 
 <br>
@@ -99,8 +99,8 @@ Albert Cairo's visualization of the scores from Thaler's exam case study
 
 . . .
 
-::: {.center-text}
-[**Mapping?**]{.teal-text .body-text-m}
+::: {.center-text .body-text-m}
+[**Mapping?**]{.teal-text}
 
 *How values of a variable(s) of interest are represented by visuals (e.g height of bar, shaded region of area plot, color of data points)*
 :::
@@ -122,7 +122,7 @@ Albert Cairo's visualization of the scores from Thaler's exam case study
 :::
 
 ::: {.right-align-text}
--Albert Cairo^1^, in his book, [*The Truthful Art*](https://www.amazon.com/Truthful-Art-Data-Charts-Communication/dp/0321934075)
+-Albert Cairo^1^, in his book, [*The Truthful Art*](https://www.amazon.com/Truthful-Art-Data-Charts-Communication/dp/0321934075){target="_blank"}
 :::
 
 ::: footer
@@ -224,7 +224,7 @@ LENGHT, HEIGHT, POSITION probably the best (have students discuss)
 ::: {.column width="50%"}
 
 ::: {.center-text .body-text-s}
-William S. Cleveland & Robert McGill (1984) **Graphical Perception: Theory, Experimentation, and Application to the Development of Graphical Methods**, *Journal of the American Statistical Association*, 79:387, 531-554, DOI: [10.1080/01621459.1984.10478080](https://doi.org/10.1080/01621459.1984.10478080)
+William S. Cleveland & Robert McGill (1984) **Graphical Perception: Theory, Experimentation, and Application to the Development of Graphical Methods**, *Journal of the American Statistical Association*, 79:387, 531-554, DOI: [10.1080/01621459.1984.10478080](https://doi.org/10.1080/01621459.1984.10478080){target="_blank"}
 :::
 
 <br>
@@ -233,7 +233,7 @@ William S. Cleveland & Robert McGill (1984) **Graphical Perception: Theory, Expe
 
 - successful charts are constructed based on elementary tasks "as high in the hierarchy as possible"
 
-[[Albert Cairo's recreation](https://badriadhikari.github.io/data-viz-workshop-2021/activity-perceptual-task/Solution.html) of Cleveland & McGill's Hierarchy of Elementary Perceptual Tasks {{< fa arrow-right title="an arrow pointing to the right" >}}]{.body-text-s .gray-text}
+[[Albert Cairo's recreation](https://badriadhikari.github.io/data-viz-workshop-2021/activity-perceptual-task/Solution.html){target="_blank"} of Cleveland & McGill's Hierarchy of Elementary Perceptual Tasks {{< fa arrow-right title="an arrow pointing to the right" >}}]{.body-text-s .gray-text}
 
 :::
 
@@ -390,7 +390,7 @@ ggplot(circles_bars, aes(x = size, y = id)) +
 {{< include sections/3.1-choropleth.qmd >}}
 
 ::: {.center-text .gray-text .body-text-s}
-Precipitation data downloaded from NOAA's [National Centers for Environmental Information](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202312/60/value).
+Map created using precipitation data from NOAA's [National Centers for Environmental Information](https://www.ncei.noaa.gov/access/monitoring/climate-at-a-glance/county/mapping/110/pcp/202312/60/value){target="_blank"}.
 :::
 
 ---
@@ -423,7 +423,7 @@ Consider how you might display the same data in the following Sankey diagram, wh
 {{< include sections/3.1-sankey.qmd >}}
 
 ::: {.gray-text .center-text .body-text-s}
-Graphic recreated using the [`{networkD3}` package](https://christophergandrud.github.io/networkD3/) following [Louise E. Sinks'](https://lsinks.github.io/) blog post, [TidyTuesday: Exploring Refugee Flow with A Sankey Diagram](https://lsinks.github.io/posts/2023-08-28-TidyTuesday-Refugees/TidyTuesday34-refugees.html)
+Graphic recreated using the [`{networkD3}` package](https://christophergandrud.github.io/networkD3/){target="_blank"} following [Louise E. Sinks'](https://lsinks.github.io/){target="_blank"} blog post, [TidyTuesday: Exploring Refugee Flow with A Sankey Diagram](https://lsinks.github.io/posts/2023-08-28-TidyTuesday-Refugees/TidyTuesday34-refugees.html){target="_blank"}
 :::
 
 ::: notes
@@ -454,7 +454,7 @@ Bertini E, Correll M, Franconeri S (2020) [Why Shouldn't All Charts Be Scatter P
 
 ---
 
-## {#tips0 data-menu-title="Tips for choosing a graph"}
+## {#tips data-menu-title="Tips for choosing a graph"}
 
 [Tips for choosing the right graphic form]{.slide-title}
 
@@ -481,30 +481,30 @@ Bertini E, Correll M, Franconeri S (2020) [Why Shouldn't All Charts Be Scatter P
 5. [**Test the outcomes of your graphic on others,**]{.teal-text} particularly on those who are representative of the audience you are trying to reach.
 
 ::: footer
-[*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/) [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20)*]{.gray-text .body-text-s}
+[*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s}
 :::
 
----
+<!-- --- -->
 
-## {#tips1-2 data-menu-title="Tips for choosing a graph 1 & 2"}
+<!-- ## {#tips1-2 data-menu-title="Tips for choosing a graph 1 & 2"} -->
 
-[Tips for choosing the right graphic form]{.slide-title}
+<!-- [Tips for choosing the right graphic form]{.slide-title} -->
 
-<hr>
+<!-- <hr> -->
 
-1. [**Think about the task(s) you want to enable or message(s) you want to convey.**]{.teal-text} For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.
+<!-- 1. [**Think about the task(s) you want to enable or message(s) you want to convey.**]{.teal-text} For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values. -->
 
-2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.**]{.teal-text} For example, do you have several vs. many data points? How many categorical and / or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate.
+<!-- 2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.**]{.teal-text} For example, do you have several vs. many data points? How many categorical and / or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate. -->
 
-3. [**Try different graphic forms,** especially if you have more than one task to enable or message to convey.]{.gray-text}
+<!-- 3. [**Try different graphic forms,** especially if you have more than one task to enable or message to convey.]{.gray-text} -->
 
-4. [**Arrange the components of the graphic** to make it as easy as possible to extract meaning from your graphic quickly.]{.gray-text}
+<!-- 4. [**Arrange the components of the graphic** to make it as easy as possible to extract meaning from your graphic quickly.]{.gray-text} -->
 
-5. [**Test the outcomes of your graphic on others,** particularly on those who are representative of the audience you are trying to reach.]{.gray-text}
+<!-- 5. [**Test the outcomes of your graphic on others,** particularly on those who are representative of the audience you are trying to reach.]{.gray-text} -->
 
-::: footer
-[*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/) [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20)*]{.gray-text .body-text-s}
-:::
+<!-- ::: footer -->
+<!-- [*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
+<!-- ::: -->
 
 ---
 
@@ -529,7 +529,7 @@ knitr::include_graphics("images/week2/dvp.png")
 ```
 
 ::: {.center-text}
-[Data Viz Project](https://datavizproject.com/)
+[Data Viz Project](https://datavizproject.com/){target="_blank"}
 [displays one small data set 100 different ways]{.body-text-s}
 :::
 
@@ -546,7 +546,7 @@ knitr::include_graphics("images/week2/dtv.png")
 ```
 
 ::: {.center-text}
-[From Data to Viz](https://www.data-to-viz.com/)
+[From Data to Viz](https://www.data-to-viz.com/){target="_blank"}
 [search graphic types by data type or by function (+ R & Python Graph Gallery)]{.body-text-s}
 :::
 
@@ -563,7 +563,7 @@ knitr::include_graphics("images/week2/vu.png")
 ```
 
 ::: {.center-text}
-[The Visualization Universe](https://visualizationuniverse.com/)
+[The Visualization Universe](https://visualizationuniverse.com/){target="_blank"}
 [compares most popular graphic forms]{.body-text-s}
 :::
 
@@ -631,7 +631,7 @@ knitr::include_graphics("images/week2/horst-cont-disc.png")
 ::::
 
 ::: {.footer}
-*Art by [Allison Horst](https://allisonhorst.com/)*
+*Art by [Allison Horst](https://allisonhorst.com/){target="_blank"}*
 :::
 
 ---
@@ -698,27 +698,27 @@ knitr::include_graphics("images/week2/horst-nom-org-binary.png")
 *Art by [Allison Horst](https://allisonhorst.com/)*
 :::
 
----
+<!-- --- -->
 
-## {#tips3 data-menu-title="Tips for choosing a graph 3"}
+<!-- ## {#tips3 data-menu-title="Tips for choosing a graph 3"} -->
 
-[Tips for choosing the right graphic form]{.slide-title}
+<!-- [Tips for choosing the right graphic form]{.slide-title} -->
 
-<hr>
+<!-- <hr> -->
 
-1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.]{.gray-text}
+<!-- 1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.]{.gray-text} -->
 
-2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.** For example, do you have several vs. many data points? How many categorical and/or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate.]{.gray-text}
+<!-- 2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.** For example, do you have several vs. many data points? How many categorical and/or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate.]{.gray-text} -->
 
-3. [**Try different graphic forms**]{.teal-text} especially if you have more than one task to enable or message to convey.
+<!-- 3. [**Try different graphic forms**]{.teal-text} especially if you have more than one task to enable or message to convey. -->
 
-4. [**Arrange the components of the graphic** to make it as easy as possible to extract meaning from your graphic quickly.]{.gray-text}
+<!-- 4. [**Arrange the components of the graphic** to make it as easy as possible to extract meaning from your graphic quickly.]{.gray-text} -->
 
-5. [**Test the outcomes of your graphic on others,** particularly on those who are representative of the audience you are trying to reach.]{.gray-text}
+<!-- 5. [**Test the outcomes of your graphic on others,** particularly on those who are representative of the audience you are trying to reach.]{.gray-text} -->
 
-::: footer
-[*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/) [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20)*]{.gray-text .body-text-s}
-:::
+<!-- ::: footer -->
+<!-- [*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
+<!-- ::: -->
 
 ---
 
@@ -811,7 +811,7 @@ joined_precip_geom <- full_join(county_geo_wrangled, precip_wrangled)
 
 base_map <- ggplot(joined_precip_geom) +
   geom_sf(aes(fill = perc_change), linewidth = 0.1) +
-  labs(title = "5-year precipitation compared with the 20th century average",
+  labs(title = "5-year precipitation compared to the 20th century average",
        subtitle = "January 2019 - December 2023",
        caption = "Source: National Centers for Environmental Information") +
   theme_void() +
@@ -840,7 +840,13 @@ base_map +
                          min(na.omit(joined_precip_geom)$perc_change),
                          0,
                          max(na.omit(joined_precip_geom)$perc_change)))) +
-  guides(fill = guide_colorbar(barwidth = 15, barheight = 0.75))
+  guides(fill = guide_colorbar(barwidth = 15, barheight = 0.75)) +
+  theme(
+    plot.title = element_text(size = 19),
+    plot.subtitle = element_text(size = 16),
+    plot.caption = element_text(size = 11, hjust = 1),
+    legend.text = element_text(size = 11)
+  )
 
 ##~~~~~~~~~~~~~~~~~~~~~~~~~~
 ##  ~ create bar chart  ----
@@ -857,33 +863,41 @@ joined_precip_geom |>
        title = "Top 10 California counties to recieve the most rainfall, Jan 2019 - Dec 2023") +
   theme_classic() +
   theme(
-    plot.title.position = "plot"
+    plot.title.position = "plot",
+    plot.title = element_text(size = 20),
+    axis.text = element_text(size = 16),
+    axis.title = element_text(size = 18)
   )
 ```
 
-[Our choropleth map displays 5-year precipitation as compared to the 20th century average by US county. But what if we wanted to explore precipitation across CA counties? A choropleth, which uses colors to encode information, may not be the easiest for making these comparisons. Choosing a graphical form from the top of the hierarchy (e.g. bar chart) may be more effective.]{.body-text-s}
+::: {.notes}
 
----
+Consider how easy / difficult comparing precipitation across a subset of counties might be using only color to encode data.
 
-## {#tips4 data-menu-title="Tips for choosing a graph 4"}
-
-[Tips for choosing the right graphic form]{.slide-title}
-
-<hr>
-
-1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.]{.gray-text}
-
-2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.** For example, do you have several vs. many data points? How many categorical and/or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate.]{.gray-text}
-
-3. [**Try different graphic forms,** especially if you have more than one task to enable or message to convey.]{.gray-text}
-
-4. [**Arrange the components of the graphic**]{.teal-text} to make it as easy as possible to extract meaning from your graphic quickly.
-
-5. [**Test the outcomes of your graphic on others,** particularly on those who are representative of the audience you are trying to reach.]{.gray-text}
-
-::: footer
-[*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/) [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20)*]{.gray-text .body-text-s}
+Our choropleth map displays 5-year precipitation as compared to the 20th century average by US county. But what if we wanted to explore precipitation across CA counties? A choropleth, which uses colors to encode information, may not be the easiest for making these comparisons. Choosing a graphical form from the top of the hierarchy (e.g. bar chart) may be more effective.
 :::
+
+<!-- --- -->
+
+<!-- ## {#tips4 data-menu-title="Tips for choosing a graph 4"} -->
+
+<!-- [Tips for choosing the right graphic form]{.slide-title} -->
+
+<!-- <hr> -->
+
+<!-- 1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.]{.gray-text} -->
+
+<!-- 2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.** For example, do you have several vs. many data points? How many categorical and/or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate.]{.gray-text} -->
+
+<!-- 3. [**Try different graphic forms,** especially if you have more than one task to enable or message to convey.]{.gray-text} -->
+
+<!-- 4. [**Arrange the components of the graphic**]{.teal-text} to make it as easy as possible to extract meaning from your graphic quickly. -->
+
+<!-- 5. [**Test the outcomes of your graphic on others,** particularly on those who are representative of the audience you are trying to reach.]{.gray-text} -->
+
+<!-- ::: footer -->
+<!-- [*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
+<!-- ::: -->
 
 ---
 
@@ -917,7 +931,7 @@ knitr::include_graphics("images/week2/cairo-advertising-v1.png")
 
 ::: footer
 ::: {.center-text .gray-text}
-Images from [Albert Cairo's *The Truthful Art*](https://www.albertocairo.com/)
+Images from [Albert Cairo's *The Truthful Art*](https://www.albertocairo.com/){target="_blank"}
 :::
 :::
 
@@ -976,7 +990,7 @@ knitr::include_graphics("images/week2/cairo-advertising-v2.png")
 
 ::: footer
 ::: {.center-text .gray-text}
-Images from [Albert Cairo's *The Truthful Art*](https://www.albertocairo.com/)
+Images from [Albert Cairo's *The Truthful Art*](https://www.albertocairo.com/){target="_blank"}
 :::
 :::
 
@@ -1005,7 +1019,7 @@ knitr::include_graphics("images/week2/sonderegger-fed-spending1.png")
 
 ::: footer
 ::: {.center-text .gray-text}
-Example from Derek L. Sonderegger's online textbook, [STA 141 - Exploratory Data Analysis and Visualization](https://bookdown.org/dereksonderegger/141/)
+Example from Derek L. Sonderegger's online textbook, [STA 141 - Exploratory Data Analysis and Visualization](https://bookdown.org/dereksonderegger/141/){target="_blank"}
 :::
 :::
 
@@ -1035,7 +1049,7 @@ knitr::include_graphics("images/week2/sonderegger-fed-spending2.png")
 
 ::: footer
 ::: {.center-text .gray-text}
-Example from Derek L. Sonderegger's online textbook, [STA 141 - Exploratory Data Analysis and Visualization](https://bookdown.org/dereksonderegger/141/)
+Example from Derek L. Sonderegger's online textbook, [STA 141 - Exploratory Data Analysis and Visualization](https://bookdown.org/dereksonderegger/141/){target="_blank"}
 :::
 :::
 
@@ -1061,7 +1075,7 @@ knitr::include_graphics("images/week2/wilkes-a.png")
 
 ::: footer
 ::: {.center-text .gray-text}
-Example from Claus Wilke's, [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/visualizing-amounts.html)
+Example from Claus Wilke's, [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/visualizing-amounts.html){target="_blank"}
 :::
 :::
 
@@ -1089,31 +1103,31 @@ knitr::include_graphics("images/week2/wilkes-b.png")
 
 ::: footer
 ::: {.center-text .gray-text}
-Example from Claus Wilke's, [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/visualizing-amounts.html)
+Example from Claus Wilke's, [Fundamentals of Data Visualization](https://clauswilke.com/dataviz/visualizing-amounts.html){target="_blank"}
 :::
 :::
 
----
+<!-- --- -->
 
-## {#tips5 data-menu-title="Tips for choosing a graph 5"}
+<!-- ## {#tips5 data-menu-title="Tips for choosing a graph 5"} -->
 
-[Tips for choosing the right graphic form]{.slide-title}
+<!-- [Tips for choosing the right graphic form]{.slide-title} -->
 
-<hr>
+<!-- <hr> -->
 
-1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.]{.gray-text}
+<!-- 1. [**Think about the task(s) you want to enable or message(s) you want to convey.** For example, do you want to compare, see change or flow, reveal relationships or connections, envision temporal or spatial patterns, show big picture trends or allow for comparisons of individual values.]{.gray-text} -->
 
-2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.** For example, do you have several vs. many data points? How many categorical and/or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate.]{.gray-text}
+<!-- 2. [**Consider the number of variables and the number of data points, as well as the data types you're working with.** For example, do you have several vs. many data points? How many categorical and/or numeric variables? Are your variables ordered or not ordered? Data types can dictate which graphical form is appropriate.]{.gray-text} -->
 
-3. [**Try different graphic forms,** especially if you have more than one task to enable or message to convey.]{.gray-text}
+<!-- 3. [**Try different graphic forms,** especially if you have more than one task to enable or message to convey.]{.gray-text} -->
 
-4. [**Arrange the components of the graphic** to make it as easy as possible to extract meaning from your graphic quickly.]{.gray-text}
+<!-- 4. [**Arrange the components of the graphic** to make it as easy as possible to extract meaning from your graphic quickly.]{.gray-text} -->
 
-5. [**Test the outcomes of your graphic on others,**]{.teal-text} particularly on those who are representative of the audience you are trying to reach.
+<!-- 5. [**Test the outcomes of your graphic on others,**]{.teal-text} particularly on those who are representative of the audience you are trying to reach. -->
 
-::: footer
-[*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/) [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20)*]{.gray-text .body-text-s}
-:::
+<!-- ::: footer -->
+<!-- [*Most of the above tips are adapted from [Albert Cairo's](https://www.albertocairo.com/){target="_blank"} [The Truthful Art](https://www.amazon.com/gp/product/0321934075/ref=as_li_qf_sp_asin_il_tl?camp=1789&creative=9325&creativeASIN=0321934075&ie=UTF8&linkCode=as2&linkId=A7BVNPNHHPEPJU7K&tag=thefunart03-20){target="_blank"}*]{.gray-text .body-text-s} -->
+<!-- ::: -->
 
 ---
 
@@ -1136,7 +1150,7 @@ knitr::include_graphics("images/week2/iraq-deaths.png")
 ```
 
 ::: {.center-text .gray-text .body-text-s}
-Source: [Iraq's bloody toll](https://www.scmp.com/infographics/article/1284683/iraqs-bloody-toll).
+Source: [Iraq's bloody toll](https://www.scmp.com/infographics/article/1284683/iraqs-bloody-toll){target="_blank"}.
 :::
 
 :::
@@ -1195,7 +1209,7 @@ knitr::include_graphics("images/week2/gun-deaths-original.png")
 ```
 
 ::: {.center-text .gray-text .body-text-s}
-Source: [This Chart Shows An Alarming Rise In Florida Gun Deaths After 'Stand Your Ground' Was Enacted](https://www.businessinsider.com/gun-deaths-in-florida-increased-with-stand-your-ground-2014-2).
+Source: [This Chart Shows An Alarming Rise In Florida Gun Deaths After 'Stand Your Ground' Was Enacted](https://www.businessinsider.com/gun-deaths-in-florida-increased-with-stand-your-ground-2014-2){target="_blank"}.
 :::
 
 :::
@@ -1274,7 +1288,7 @@ knitr::include_graphics("images/week2/gun-deaths-original.png")
 
 ::: footer
 ::: {.gray-text .center-text}
-Critique by Albert Cairo in his post [In visualization, baselines and negative space matter](http://www.thefunctionalart.com/2014/04/in-visualization-baselines-and-negative.html)
+Critique by Albert Cairo in his post [In visualization, baselines and negative space matter](http://www.thefunctionalart.com/2014/04/in-visualization-baselines-and-negative.html){target="_blank"}
 :::
 :::
 
@@ -1286,7 +1300,7 @@ Critique by Albert Cairo in his post [In visualization, baselines and negative s
 
 <hr>
 
-Business Insider [published](https://www.businessinsider.com/gun-deaths-in-florida-increased-with-stand-your-ground-2014-2) an updated graphic (originally designed by Reuters), which was submitted by a reader that, **"more clearly shows that gun deaths increased between 2005 and 2007 by flipping the y-axis"**:
+Business Insider [published](https://www.businessinsider.com/gun-deaths-in-florida-increased-with-stand-your-ground-2014-2){target="_blank"} an updated graphic (originally designed by Reuters), which was submitted by a reader that, **"more clearly shows that gun deaths increased between 2005 and 2007 by flipping the y-axis"**:
 
 <br>
 
