--- a/course-materials/week2.qmd
+++ b/course-materials/week2.qmd
@@ -98,7 +98,7 @@ Oftentimes, packages that are built to interface with APIs will include their ow
 
 <!-- In class, we'll source our key (by running `source(here::here("week2", "KEYS.R"))`) into any scripts / Qmd files, where required.  -->
 
-### C. Download `.qmd` templates & review initial data wrangling code
+### D. Download `.qmd` templates & review initial data wrangling code
 
 1. Download all necessary templates (links in the table below) and save them to a `EDS-240-data-viz-examples/week2/` folder. 
 
