fixed broken link in HW1 to data sources section of the resources page

--- a/course-materials/assignments/HW1.qmd
+++ b/course-materials/assignments/HW1.qmd
@@ -148,7 +148,7 @@ Everyone receives one "free pass" for not submitting assignments via specified c
 
 ### 2b. Find data and brainstorm questions {#hw1-p2b}
 
-Now that you have a better understanding of where we're headed, let's make a bit of progress towards that end goal. [**This week, you'll focus on finding data that interest you and begin brainstorming some questions that you might explore / answer using those data.**]{.teal-text} Your data set(s) may be related to a past project, or even your current Capstone or GP. It may also be a completely new data set(s), unrelated to anything you're currently working on. Explore the [Data sources](https://samanthacsik.github.io/EDS-240-data-viz/resources.html#data-sources){target="_blank"} section of the course website's resources page if you need some inspiration on where to start (you are *not* limited to just these data sources): 
+Now that you have a better understanding of where we're headed, let's make a bit of progress towards that end goal. [**This week, you'll focus on finding data that interest you and begin brainstorming some questions that you might explore / answer using those data.**]{.teal-text} Your data set(s) may be related to a past project, or even your current Capstone or GP. It may also be a completely new data set(s), unrelated to anything you're currently working on. Explore the [Data sources](../../resources.qmd#data-sources){target="_blank"} section of the course website's resources page if you need some inspiration on where to start (you are *not* limited to just these data sources): 
 
 ::: {.callout-tip}
 ## Asking the right question is *critical* and also one of the most challenging steps
