minor updates to new HW1 tips

--- a/course-materials/assignments/HW1.qmd
+++ b/course-materials/assignments/HW1.qmd
@@ -77,7 +77,7 @@ Modified viz, by Sam Shanny-Csik (refactored code, see below)
 # Tips: 
 - Install the following packages (if you don't already have them): `{colorspace}`, `{geofacet}`, `{ggtext}`, `{glue}`, `{grid}`, `{magick}`, `{patchwork}`, `{scales}`, `{showtext}`, `{tidyverse}`
 - The best (and really only) way to understand this code is to run it **line-by-line** -- for example, you might check out an original data frame > add in the first piped data wrangling function > check out the modified data frame > pipe in the next data wrangling function > check out the modified data frame again > and so on. You can approach "building up" the ggplot objects in a similar fashion. 
-- You should leave the code chunk options, `#| eval: false` & `#| echo: true` set as-is. The final infographic is optimized (e.g. text sizes, spaces, etc.) to be saved / viewed as a PNG file, not as rendered in the RStudio Plots pane or embedded in a rendered Quarto document (we'll talk more about the complexities of saving ggplots in a later discussion section!)
+- You should leave the code chunk options, `#| eval: false` & `#| echo: true` set as-is. The final infographic is optimized (e.g. text sizes, spaces, etc.) to be saved / viewed as a PNG file, not as rendered in the RStudio Plots pane or embedded in a rendered Quarto document -- you may notice that the text in each individual ggplot looks wayyy too large when viewed in RStudio, but is appropriately-sized when saved as a PNG. We'll talk more about the complexities of saving ggplots in a later discussion section!
     - If you leave the above code chunk options in place, you should be able to successfully render the Quarto document so that it prints only the code and your annotations, along with your responses to the final (part 1b) questions.
 - Some lines of code have already been annotated for you -- aim for this level of detail
 - Pull up documentation for a function directly in RStudio's **Help** pane by running `?function_name` in the console. Vignettes and `pkgdown` sites are incredible resources as well (e.g. here is a [vignette](https://cloud.r-project.org/web/packages/patchwork/vignettes/patchwork.html){target="_blank"} and the [pkgdown](https://patchwork.data-imaginist.com/){target="_blank"} site for the `{patchwork}` package)
